...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">


                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/card_post_image"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/post_image_max_height"
                            android:scaleType="fitXY"
                            app:image="@{viewModel.imageUrl}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
...
                        android:layout_height="2dp"
                        android:layout_marginTop="@dimen/min_margin_between_views"
                        app:layout_constraintTop_toBottomOf="@id/img_comment_count_icon"
                        android:background="@drawable/shadow"/>

                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclew_comments"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:listitem="@layout/item_comment"
                            android:layout_marginTop="@dimen/margin_between_views"
                            android:layout_marginBottom="@dimen/margin_between_views"
                            app:layout_constraintTop_toBottomOf="@id/post_body_separator"/>
...
